<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/formularios"
    tools:context=".fragmentos.RegistroFragment">
<TextView
    android:id="@+id/tvtitulo"
    android:text="@string/tv_titulo"
    android:textSize="28sp"
    android:gravity="center_horizontal"
    android:textColor="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></TextView>

    <EditText
        android:id="@+id/etnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName|textAutoComplete"></EditText>

    <EditText
        android:id="@+id/etapellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_apellidos"
        android:inputType="textPersonName"></EditText>

    <EditText
        android:id="@+id/etedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_edad"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"></EditText>

    <EditText
        android:id="@+id/etfecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_fecha"
        android:inputType="datetime"></EditText>
    <Button
        android:id="@+id/btguardar"
        android:text="@string/btguardar"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Button>


</LinearLayout>